--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@ button{
     background-color: blue;
     color: white;
 }
+
+.passo{
+    display:nome;
+}
+
+.passo.ativo{
+    display: block;
+}
+
+main{
+    text-align: center;
+    max-width: 90%;
+}
+img{
+    max-width: 80%;
+}
